--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
   <h1 class="header">Список дел Чарукова</h1>
   <div class="add-field">
     <input type="text" class="add-field__exercise" placeholder=" Впишите текст задачи...">
-    <button id="button" class="add-field__add">Добавить</button>
+    <div class="add-field__half">
+      <button id="button" class="add-field__addend">Добавить в конец</button>
+      <button id="button" class="add-field__addbegin">Добавить в начало</button>
+    </div>
   </div>
   <div class="area">
     <h3 class="area__list">Список задач:</h3>
