--- a/index-2.html
+++ b/index-2.html
@@ -25,13 +25,13 @@
 </head>
 
 <body>
-  <h1 class="header">Чет\Нечет</h1>
+  <h1 class="header">ЗП в месяц</h1>
   <div class="add-field">
     <input type="text" class="add-field__exercise" placeholder=" Впишите число...">
-      <button id="button" class="add-field__addend">Какое число?</button>
+      <!-- <button id="button" class="add-field__addend">Какое число?</button> -->
   </div>
   <div class="area">
-    <h3 class="area__list">ШО за число:</h3>
+    <h3 class="area__list">ЗП в год:</h3>
     <div class="area__half-area">
       <!-- <div class="area__element">
         <input type="checkbox" class="area__element__check">
