Добавил строку для внесения количества месяцев

--- a/index-2.html
+++ b/index-2.html
@@ -28,6 +28,7 @@
   <h1 class="header">ЗП в месяц</h1>
   <div class="add-field">
     <input type="text" class="add-field__exercise" placeholder=" Впишите число...">
+    <input type="text" class="add-field__month" placeholder=" Впишите число...">
       <!-- <button id="button" class="add-field__addend">Какое число?</button> -->
   </div>
   <div class="area">
