--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main-2.css">
 
   <meta name="theme-color" content="#fafafa">
   <link rel="preconnect" href="https://fonts.gstatic.com">
