--- a/index3.html
+++ b/index3.html
@@ -29,7 +29,7 @@
       <button id="button" class="hide">Спрятать блок</button>
       <div class="block">
         <p>Я есть блок</p>
-        <img src="img/Block Alecs.jpg"
+        <img src="img/Block Alecs.jpg">
       </div>
   
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
