--- a/index3.html
+++ b/index3.html
@@ -25,9 +25,14 @@
 </head>
 
 <body>
-      <button id="button" class="show">Показать блок</button>
+      <!-- <button id="button" class="show">Показать блок</button>
       <button id="button" class="hide">Спрятать блок</button>
       <div class="block">
+        <p>Я есть блок</p>
+        <img src="img/Block Alecs.jpg">
+      </div> -->
+      <button id="button" class="button">Показать/Спрятать блок</button>
+      <div class="showblock">
         <p>Я есть блок</p>
         <img src="img/Block Alecs.jpg">
       </div>
