--- a/index-5.html
+++ b/index-5.html
@@ -25,32 +25,37 @@
 </head>
 
 <body>
-  <h1 class="header">Хедер</h1>
-  <hr class="hr">
-  <div class="div">
-    <h1 class="please">Пожалуйста, заполните форму</h1>
-    <button class="open">Открыть форму</button>
-  </div>
-  <hr class="hr2">
-  <footer class="footer">Футер</footer>
-
-  <div class="hystmodal" id="myModal">
-    <div class="hystmodal__window">
-        <button class="hystmodal__close"></button>  
-        <div class="hystmodal__area">
-          <div class="hystmodal__area__name">
-            <p class="hystmodal__area__your-name">Ваше имя:</p>
-            <p class="hystmodal__area__your-post">Ваша должность:</p>
-        </div>
-        <div class="hystmodal__area__input">
-            <input class="hystmodal__area__input-name">
-            <input class="hystmodal__area__input-post">
-        </div>
+  <wrapper class="wrapper">
+    <content class="content">
+      <h1 class="header">Хедер</h1>
+      <hr class="hr">
+      <div class="div">
+        <h1 class="please">Пожалуйста, заполните форму</h1>
+        <button class="open">Открыть форму</button>
       </div>
-        <button class="hystmodal__save">Сохранить</button>
-    </div>    
-</div>
+    </content>
+    <hr class="hr2">
+    <footer class="footer">Футер</footer>
+  </wrapper>
+
+      <div class="hystmodal" id="myModal">
+        <div class="hystmodal__window">
+            <button class="hystmodal__close"></button>  
+            <div class="hystmodal__area">
+              <div class="hystmodal__area__name">
+                <p class="hystmodal__area__your-name">Ваше имя:</p>
+                <p class="hystmodal__area__your-post">Ваша должность:</p>
+            </div>
+            <div class="hystmodal__area__input">
+                <input class="hystmodal__area__input-name">
+                <input class="hystmodal__area__input-post">
+            </div>
+          </div>
+            <button class="hystmodal__save">Сохранить</button>
+        </div>    
+      </div>
   
+
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main-5.js"></script>
