--- a/index-checkbox.html
+++ b/index-checkbox.html
@@ -28,8 +28,8 @@
   <wrapper class="wrapper">
     <section class="content">
       <div class="all_worker">
-        <p><input type="checkbox" class="rabota" value="rabota">Работают</p>
-        <p><input type="checkbox" class="otpusk" value="otpusk">В отпуске</p>
+        <label><input type="checkbox" class="rabota" value="rabota">Работают</label>
+        <label><input type="checkbox" class="otpusk" value="otpusk">В отпуске</label>
       </div>
       <div class="obolochka">
     </div>
