--- a/index-radio-button.html
+++ b/index-radio-button.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <wrapper class="wrapper">
+  <!-- <wrapper class="wrapper">
     <section class="content">
       <div class="top_conditions">
         <p>Цвет фона блока: </p>
@@ -41,7 +41,7 @@
       </div>
     </div>
     </section>
-  </wrapper>
+  </wrapper> -->
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
