--- a/index-5.html
+++ b/index-5.html
@@ -38,30 +38,38 @@
 
   <div class="hystmodal" id="myModal">
     <div class="hystmodal__window">
-      <button class="hystmodal__close"></button>  
+      <button class="hystmodal__close"></button>
       <div class="hystmodal__area">
         <div class="hystmodal__area__name">
           <p class="hystmodal__area__your-name">Ваше имя:</p>
           <p class="hystmodal__area__your-post">Ваша должность:</p>
         </div>
         <div class="hystmodal__area__input">
-            <input class="hystmodal__area__input-name">
-            <input class="hystmodal__area__input-post">
+          <input class="hystmodal__area__input-name">
+          <input class="hystmodal__area__input-post">
         </div>
       </div>
-        <button class="hystmodal__save">Сохранить</button>
-    </div>    
+      <button class="hystmodal__save">Сохранить</button>
+    </div>
   </div>
-  
 
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main-5.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('set', 'anonymizeIp', true);
+    ga('set', 'transport', 'beacon');
+    ga('send', 'pageview')
+
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
