--- a/index012.html
+++ b/index012.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="js/JS 012 learn.js"></script>
+  <script src="js/learn_026_JS.js"></script>
 </body>
 </html>
