--- a/learn_JS_43-___ fetch/!!!learn_JS_43-48.html
+++ b/learn_JS_43-___ fetch/!!!learn_JS_43-48.html
@@ -271,6 +271,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/!!!learn_JS_43-48.js"></script>
 </body>
 </html>
